# rank-k

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  __init__.py  analyze_evaluation_modes.py  analyze_identical_metrics.py  analyze_score_ranges.py  debug_evaluation_issue.py  debug_graded_relevance.py  debug_identical_metrics.py  debug_recall_discrepancy.py  explain_binary_vs_graded.py  improve_graded_relevance.py  pyproject.toml  requirements.txt  simple_graded_relevance_plan.md  test_actual_implementation.py  test_both_modes_precision.py  test_current_implementation.py  test_graded_difference.py  test_graded_realistic.py  test_graded_relevance.py  test_graded_vs_binary_demo.py  test_improved_precision.py  test_improved_reference_based.py  test_precision_issue.py  test_ranking_preservation.py  test_ranx_id_system.py  test_reranking_issue.py
.github/workflows/: docs.yml
docs/: README.ko.md  README.md  api-reference.md  index.md  installation.md  quickstart.md
docs/en/: api-reference.md  bilingual-output.md  installation.md  quickstart.md
docs/ko/: api-reference.md  bilingual-output.md  installation.md  quickstart.md
examples/: README.md  basic_tokenizer.py  bge_m3_evaluation.py  comprehensive_comparison.py  custom_retriever.py  embedding_models_comparison.py  openai_embeddings_evaluation.py  reference_based_evaluation.py  retrieval_methods_comparison.py  rouge_evaluation.py
ranx_k/evaluation/: __init__.py  enhanced_rouge.py  kiwi_rouge.py  openai_similarity.py  similarity_ranx.py  utils.py
ranx_k/tokenizers/: __init__.py  kiwi_tokenizer.py
scripts/: analyze_document_positions.py  debug_metrics.py  debug_metrics_realistic.py  debug_ranx_detailed.py  debug_recall_issue.py  debug_similarity_test.py  fix_korean_comments.py  simulate_933_score.py  test_enhanced_tokenizer.py  test_reference_based_eval.py  upload_pypi.py
tests/: __init__.py  test_retrieval_methods_comparison.py  test_tokenizers.py
