[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranx-k"
version = "0.0.9"
description = "Korean-optimized RAG evaluation toolkit based on ranx with Kiwi tokenizer and Korean language support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pandas Studio", email = "ontofinance@gmail.com"}
]
maintainers = [
    {name = "Pandas Studio", email = "ontofinance@gmail.com"}
]
keywords = ["ranx", "korean", "nlp", "evaluation", "retrieval", "kiwi", "rouge", "ir-evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "kiwipiepy>=0.15.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "ranx>=0.3.0",
    "python-dotenv>=1.0.1",
    "twine>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/tsdata/rank-k"
Repository = "https://github.com/tsdata/rank-k"
Issues = "https://github.com/tsdata/rank-k/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ranx_k --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
